<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        tools:context=".RecoverPassword">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logologin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Logo"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/InstructionsEmail"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/textboxEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailSubject"
                android:padding="10dp"
                />

            <Button
                android:id="@+id/buttonEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SendCode"
                android:paddingTop="16dp"
                android:textColor="@color/white"
                android:background="@color/Blue"
                android:gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/textCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/InstructionsCode"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:visibility="gone"
                />

            <EditText
                android:id="@+id/textboxCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="10dp"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/buttonCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ValidateCode"
                android:paddingTop="16dp"
                android:textColor="@color/white"
                android:background="@color/Blue"
                android:gravity="center_horizontal"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/NewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newPassword"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:visibility="gone"
                />
            <EditText
                android:id="@+id/textboxPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="10dp"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/RepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/RepeatPassword"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:visibility="gone"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="10dp"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/buttonPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ValidateCode"
                android:paddingTop="16dp"
                android:textColor="@color/white"
                android:background="@color/Blue"
                android:gravity="center_horizontal"
                android:visibility="gone"
                />

        </LinearLayout>

    </RelativeLayout>
</layout>